[package]
name = "tokio-tls-listener"
version = "0.1.0"
edition = "2021"

[features]
tls12 = ["tokio-rustls/tls12"]
logging = ["tokio-rustls/logging"]
early-data = ["tokio-rustls/early-data"]
dangerous_configuration = ["tokio-rustls/dangerous_configuration"]

[dependencies]
tokio = { version = "1", default-features = false, features = ["io-util", "net"] }
tokio-rustls = { version = "0.24", default-features = false }
rustls-pemfile = "1"